--- a/index.html
+++ b/index.html
@@ -11,18 +11,31 @@
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <main>
       <section class="about">
-        <p>About</p>
+        <div class="container">
+          <h2 class="app-about-title">About our app</h2>
+          <p class="app-about-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+            nunc ante velit vitae.
+          </p>
+          <div class="app-about-img-wrap">
+            <img
+              class="app-about-img"
+              src="./images/app-about/about-app-desktop.png"
+              alt=""
+              width="238" />
+          </div>
+        </div>
       </section>
       <section class="features">
-        <p>Features</p>
+        <div class="container"><p>Features</p></div>
       </section>
       <section class="interface">
-        <p>Interface</p>
+        <div class="container"><p>Interface</p></div>
       </section>
     </main>
   </body>
