--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
               src="./images/app-about/about-app-desktop.png"
               alt=""
               width="238" />
+            <div class="ellipse"></div>
+
             <svg class="app-about-elipse" width="212" height="71">
               <use href="./images/icons.svg#icon-ellipse"></use>
             </svg>
