--- a/index.html
+++ b/index.html
@@ -22,18 +22,15 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
             nunc ante velit vitae.
           </p>
-          <div class="app-about-img-wrap">
-            <img
-              class="app-about-img"
-              src="./images/app-about/about-app-desktop.png"
-              alt=""
-              width="238" />
-            <div class="ellipse"></div>
-
-            <svg class="app-about-elipse" width="212" height="71">
+          <img
+            class="app-about-img"
+            src="./images/app-about/about-app-desktop.png"
+            alt=""
+            width="238" />
+          <div class="ellipse"></div>
+          <!-- <svg class="app-about-elipse" width="212" height="71">
               <use href="./images/icons.svg#icon-ellipse"></use>
-            </svg>
-          </div>
+            </svg> -->
         </div>
       </section>
       <section class="features">
