--- a/index.html
+++ b/index.html
@@ -31,6 +31,50 @@
           <!-- <svg class="app-about-elipse" width="212" height="71">
               <use href="./images/icons.svg#icon-ellipse"></use>
             </svg> -->
+          <ul class="app-about-list">
+            <li class="app-about-list-item">
+              <svg class="app-about-list-item-icon">
+                <use
+                  href="./images/icons.svg#about-list-item-icon"
+                  width="24"
+                  height="24"></use>
+              </svg>
+              <div class="app-about-item-wrap">
+                <h3 class="app-about-list-item-title">Creative design</h3>
+                <p class="app-about-list-item-descr">
+                  Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+                </p>
+              </div>
+            </li>
+            <li class="app-about-list-item">
+              <svg class="app-about-list-item-icon">
+                <use
+                  href="./images/icons.svg#about-list-item-icon"
+                  width="24"
+                  height="24"></use>
+              </svg>
+              <div class="app-about-item-wrap">
+                <h3 class="app-about-list-item-title">Easy to use</h3>
+                <p class="app-about-list-item-descr">
+                  Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+                </p>
+              </div>
+            </li>
+            <li class="app-about-list-item">
+              <svg class="app-about-list-item-icon">
+                <use
+                  href="./images/icons.svg#about-list-item-icon"
+                  width="24"
+                  height="24"></use>
+              </svg>
+              <div class="app-about-item-wrap">
+                <h3 class="app-about-list-item-title">Best user experience</h3>
+                <p class="app-about-list-item-descr">
+                  Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="features">
