--- a/index.html
+++ b/index.html
@@ -22,15 +22,26 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
             nunc ante velit vitae.
           </p>
-          <img
-            class="app-about-img"
-            src="./images/app-about/about-app-desktop.png"
-            alt=""
-            width="238" />
+          <picture class="app-about-img">
+            <source
+              media="(min-width:1440px)"
+              srcset="
+                ./images/app-about/about-app-desktop.png    1x,
+                ./images/app-about/about-app-desktop@2x.png 2x
+              " />
+            <source
+              media="(max-width:1139px)"
+              srcset="
+                ./images/app-about/about-app-mob.png    1x,
+                ./images/app-about/about-app-mob@2x.png 2x
+              " />
+            <img
+              class="app-about-img"
+              src="./images/app-about/about-app-desktop.png"
+              alt="app 3d image"
+              width="238" />
+          </picture>
           <div class="ellipse"></div>
-          <!-- <svg class="app-about-elipse" width="212" height="71">
-              <use href="./images/icons.svg#icon-ellipse"></use>
-            </svg> -->
           <ul class="app-about-list">
             <li class="app-about-list-item">
               <svg class="app-about-list-item-icon">
