app-features-mobile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               alt="app 3d image"
               width="238" />
           </picture>
-          <div class="ellipse"></div>
+          <div class="app-about-elipse"></div>
           <ul class="app-about-list">
             <li class="app-about-list-item">
               <svg class="app-about-list-item-icon">
@@ -89,7 +89,99 @@
         </div>
       </section>
       <section class="features">
-        <div class="container"><p>Features</p></div>
+        <div class="container">
+          <h2 class="app-features-title">App features</h2>
+          <p class="app-features-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+            nunc ante velit vitae.
+          </p>
+          <ul class="app-features-list">
+            <li class="app-features-list-item">
+              <svg class="app-features-list-item-icon">
+                <use
+                  href="./images/icons.svg#features-chat-icon"
+                  width="50"
+                  height="50"></use>
+              </svg>
+              <h3 class="app-features-list-item-title">Full free chat</h3>
+              <p class="app-features-list-item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </li>
+            <li class="app-features-list-item">
+              <svg class="app-features-list-item-icon">
+                <use
+                  href="./images/icons.svg#features-features-icon"
+                  width="50"
+                  height="50"></use>
+              </svg>
+              <h3 class="app-features-list-item-title">unlimited features</h3>
+              <p class="app-features-list-item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </li>
+            <li class="app-features-list-item">
+              <svg class="app-features-list-item-icon">
+                <use
+                  href="./images/icons.svg#features-design-icon"
+                  width="50"
+                  height="50"></use>
+              </svg>
+              <h3 class="app-features-list-item-title">awesome ui design</h3>
+              <p class="app-features-list-item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </li>
+            <li class="app-features-list-item image">
+              <img
+                class="app-features-list-item-img"
+                src="./images/app-features/app-features-mob.jpg"
+                alt="" />
+            </li>
+            <li class="app-features-list-item">
+              <svg class="app-features-list-item-icon">
+                <use
+                  href="./images/icons.svg#features-version-icon"
+                  width="50"
+                  height="50"></use>
+              </svg>
+              <h3 class="app-features-list-item-title">
+                ioS & android version
+              </h3>
+              <p class="app-features-list-item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </li>
+            <li class="app-features-list-item">
+              <svg class="app-features-list-item-icon">
+                <use
+                  href="./images/icons.svg#features-retina-icon"
+                  width="50"
+                  height="50"></use>
+              </svg>
+              <h3 class="app-features-list-item-title">
+                retina ready graphics
+              </h3>
+              <p class="app-features-list-item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </li>
+            <li class="app-features-list-item">
+              <svg class="app-features-list-item-icon">
+                <use
+                  href="./images/icons.svg#features-support-icon"
+                  width="50"
+                  height="50"></use>
+              </svg>
+              <h3 class="app-features-list-item-title">
+                24/7 support by real peOPle
+              </h3>
+              <p class="app-features-list-item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="interface">
         <div class="container"><p>Interface</p></div>
