--- a/index.html
+++ b/index.html
@@ -133,10 +133,25 @@
               </p>
             </li>
             <li class="app-features-list-item image">
-              <img
-                class="app-features-list-item-img"
-                src="./images/app-features/app-features-mob.jpg"
-                alt="" />
+              <picture class="app-features-list-item-img">
+                <source
+                  media="(min-width:1440px)"
+                  srcset="
+                    ./images/app-features/app-features-desktop.jpg    1x,
+                    ./images/app-features/app-features-desktop@2x.jpg 2x
+                  " />
+                <source
+                  media="(max-width:1139px)"
+                  srcset="
+                    ./images/app-features/app-features-mob.jpg    1x,
+                    ./images/app-features/app-features-mob@2x.jpg 2x
+                  " />
+                <img
+                  class="app-features-list-item-img"
+                  src="./images/app-features/app-features-mob.jpg"
+                  alt="app interface screenshot"
+                  width="214" />
+              </picture>
             </li>
             <li class="app-features-list-item">
               <svg class="app-features-list-item-icon">
