--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <main>
-      <section class="about">
+      <!-- <section class="about">
         <div class="container">
           <h2 class="app-about-title">About our app</h2>
           <p class="app-about-text">
@@ -41,7 +41,7 @@
               alt="app 3d image"
               width="238" />
           </picture>
-          <div class="app-about-elipse"></div>
+          <div class="app-about-ellipse"></div>
           <ul class="app-about-list">
             <li class="app-about-list-item">
               <svg class="app-about-list-item-icon">
@@ -197,9 +197,29 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <section class="interface">
-        <div class="container"><p>Interface</p></div>
+        <div class="container">
+          <h2 class="app-interface-title">Check out our app interface</h2>
+          <p class="app-interface-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra
+            nunc ante velit vitae.
+          </p>
+          <div class="app-interface-slider">
+            <div class="app-interface-slide">
+              <img
+                src="./images/app-interface/app-interface-slider-main-mob.png"
+                alt="" />
+            </div>
+            <div class="app-interface-slider-dots">
+              <span class="app-interface-slider-dot-active"></span>
+              <span class="app-interface-slider-dot"></span>
+              <span class="app-interface-slider-dot"></span>
+              <span class="app-interface-slider-dot"></span>
+              <span class="app-interface-slider-dot"></span>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
