--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 ./images/app-about/about-app-desktop@2x.png 2x
               " />
             <source
-              media="(max-width:1139px)"
+              media="(max-width:1439px)"
               srcset="
                 ./images/app-about/about-app-mob.png    1x,
                 ./images/app-about/about-app-mob@2x.png 2x
@@ -141,7 +141,7 @@
                     ./images/app-features/app-features-desktop@2x.jpg 2x
                   " />
                 <source
-                  media="(max-width:1139px)"
+                  media="(max-width:1439px)"
                   srcset="
                     ./images/app-features/app-features-mob.jpg    1x,
                     ./images/app-features/app-features-mob@2x.jpg 2x
@@ -207,7 +207,7 @@
           </p>
           <div class="app-interface-slider">
             <div class="app-interface-slide">
-              <picture class="app-features-list-item-img">
+              <picture>
                 <source
                   media="(min-width:1440px)"
                   srcset="
@@ -215,16 +215,16 @@
                     ./images/app-interface/app-interface-slider-main-desktop@2x.png 2x
                   " />
                 <source
-                  media="(max-width:1139px)"
+                  media="(max-width:1439px)"
                   srcset="
                     ./images/app-interface/app-interface-slider-main-mob.png    1x,
                     ./images/app-interface/app-interface-slider-main-mob@2x.png 2x
                   " />
                 <img
-                  <img
-                  src="./images/app-interface/app-interface-slider-main-mob.png"
+                  src="./images/app-interface/app-interface-slider-main-mob1.png"
                   alt=""
-                  width="227" />
+                  width="227"
+                  alt="app interface slider image" />
               </picture>
             </div>
             <div class="app-interface-slider-dots">
